# velib-spot-predictor

./: .gitignore  .pre-commit-config.yaml  .python-version  PROJECT.md  README.md  alembic.ini  front.py  pyproject.toml
.github/scripts/: release-control.sh
.github/workflows/: bump-version.yml  deploy.yml  dev-tag.yml  python-validate.yml  release-control.yml
assets/: dashExtensions_default.js
aws/CloudFormation/: ec2-fetch-template.yml
aws/Lambda/: database-rotation-lambda.py  history-migration.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.front  compose-fetch.yml
notebooks/: 1.a Data exploration.ipynb  2.b dash-paris quartier.ipynb  filter_douzieme.py
scripts/: build_and_push_images.sh  grant_permissions.sql  migrate_json.py  populate_station_information_table.py  schedule_fetch_and_save.sh
sql/: alembic.sh  create_users.sql
tests/: test_dummy.py  test_environment.py
tests/api/: test_routes.py
tests/data/: conftest.py  test_cli.py  test_convert_data.py  test_fetch.py  test_fetch_data.py  test_fetch_save_data.py  test_geo.py  test_load_data.py  test_publish.py
tests/model/: test_predict_model.py  test_save_model.py  test_train_model.py
velib_spot_predictor/: environment.py
velib_spot_predictor/api/: __init__.py  main.py  model.py  routes.py
velib_spot_predictor/api/database/: models.py  (+1 more)
velib_spot_predictor/data/: base.py  cli.py  constants.py  convert_data.py  fetch.py  fetch_data.py  geo.py  load_data.py  publish.py
velib_spot_predictor/front/: app.py
velib_spot_predictor/model/: predict_model.py  save_model.py  train_model.py
(+7 files in other folders)
